--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,12 +38,13 @@
     background-color: rgb(43, 43, 43);
     color: white;
     font-size: 0.5cm;
+    margin: auto;
   }
   
   .web_name {
     float: left;
     text-align: left;
-    background-color: rgba(0, 0, 0, 0.452);
+    background: linear-gradient(to right, rgb(2, 2, 2, 0.4), rgba(48, 48, 48, 0.4));
     border-radius: 15px;
     margin: auto;
   }
@@ -56,11 +57,18 @@
     margin-top: -2.3cm;
     margin-left: 7.3cm;
   }
-  
+
   .hirek {
     margin: 0 auto;
     text-align: center;
     padding-top: 5cm;
+  }
+  .hirek img{
+    width: 400px;
+    height: 400px;
+    border-radius: 15px;
+    transition: all 0.4s;
+    margin: auto;
   }
   
   .hirek h1 {
@@ -117,8 +125,27 @@
   }
   
   img {
-    margin: 0 auto;
-    display: block;
+    margin: auto;
+    display: inline-block;
+    margin-right: 1px; /* opcionális térköz a képek között */
     border-radius: 18px;
+  }
+
+  @media screen and (max-width: 500px){
+    img {
+      margin: auto;
+      display: inline-block;
+      margin-right: 50px; /* opcionális térköz a képek között */
+      border-radius: 18px;
+      height: 75px;
+      width: 75px;
+    }
+    .hirek img{
+      width: 250px;
+      height: 250px;
+      border-radius: 15px;
+      transition: all 0.4s;
+      margin: auto;
+    }
   }
   
